Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI1553NET.CS


        private static class BTI1553_64
        {
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCConfig(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCConfigEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCConfigEx(UInt32 configval, UInt16 count, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCConfigMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_BCConfigMsg(UInt32 configval, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCCreateList", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_BCCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, UInt16[] data, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCCreateMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_BCCreateMsg(UInt32 configval, UInt16 cwd1, UInt16 cwd2, UInt16[] data, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCPause", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_BCPause(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCPauseCheck", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCPauseCheck(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCResume", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_BCResume(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedAgain", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedAgain(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedBranch", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedBranch(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedBranchUpdate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedBranchUpdate(Int32 destindex, Int32 opcodeindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedBuild", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedBuild(UInt16 nummsgs, UInt32[] msgaddr, UInt16[] freq, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedCall", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedCall(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedCallUpdate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedCallUpdate(Int32 destindex, Int32 opcodeindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedEntry", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedEntry(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedFrame", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedFrame(UInt32 timeval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedFrameEnd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedFrameEnd(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedFrameStart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedFrameStart(UInt32 timeval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedGap", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedGap(UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedHalt", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedHalt(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedLog", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedLog(UInt32 condition, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedMsg(UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedPause", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedPause(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedPulse", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedPulse(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedPulse0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedPulse0(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedPulse1", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedPulse1(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedRestart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedRestart(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedRetry", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedRetry(UInt32 condition, UInt16 retries, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSchedReturn", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedReturn(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSetDefaultGap", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSetDefaultGap(Int32 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSetTimeout", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSetTimeout(UInt16 timeoutval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCSyncDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCTransmitList", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCTransmitList(ref XMITFIELDS1553 xmitfieldsval, Int32 count, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCTransmitMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCTransmitMsg(ref XMITFIELDS1553 xmitfieldsval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_BCTriggerDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChGetCount", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_ChGetCount(ref Int32 a_count, ref Int32 b4_count, ref Int32 b32_count, ref Int32 c_count, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChGetInfo", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ChGetInfo(UInt16 infotype, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIs1553", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIs1553(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsA", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsA(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsB32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsB32(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsB4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsB4(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsBM", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsBM(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsC", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsC(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsD", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsD(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsM", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsM(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsP", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsP(Int32 channum, IntPtr handleval);
